# course_work4

./: .gitignore  README.md  editing_vacancies.py  get_api_hh.py  main.py  pyproject.toml  saver.py
data/: my_vacancy.json
src/: abstract_classes.py  editing_vacancies.py  get_api_hh.py  saver.py
